useMovies (return list of movies) & useSearch (input & error control)

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.error {
+  color: #eb1818;
+}
